# harness-lint

./: .gitignore  AGENTS-Install.md  AGENTS-SNIPPET-CN.md  AGENTS-SNIPPET.md  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  INIT.md  MIGRATE.md  README.ja.md  README.ko.md  README.md  README.zh.md  TODO.md  WHATS-NEW.md  harness.toml
.claude-plugin/: marketplace.json
.codex-plugin/: plugin.json
.github/workflows/: ci.yml  release.yml
Formula/: harness-lint.rb
assets/: harness-lint-hero.html  harness-lint-preview.html
design/rule-scope/: DECISION.md  GOALS.md  PLAN-1.md  PLAN-2.md  PLAN-3.md  PLAN-4.md  PLAN-5.md
docs/: AGENTS.md  README.md  ai-workflow.md  docs.json  ecosystem.md  gritql-rules.md  index.mdx  installation.mdx  introduction.mdx  migrations.md  overrides.md  quickstart.mdx  releasing.md  rule-packs.md  troubleshooting.md
docs/concepts/: configuration.mdx  lint-driven-development.mdx  rule-packs.mdx  rules.mdx
docs/guides/: ai-agent-setup.mdx  ci-integration.mdx  (+2 more)
landing/: README.md  index.html  package-lock.json  package.json  vite.config.ts
npm/: package.json
plugins/: README.md
rules/: default-local-rule-discovery-should-use-a-lowercase.md
site/: catalog.js  catalog.json  index.html  styles.css
src/: authoring.rs  cache.rs  cli.rs  compiler.rs  config.rs  config_health.rs  engine.rs  error.rs  exceptions.rs  git.rs  grit.rs  init.rs  interfaces.rs  lib.rs  main.rs  model.rs  obsidian.rs  pack.rs  paths.rs  registry.rs  report.rs  rule.rs  rule_test.rs  scratch.rs  suppression.rs
tests/: cli.rs  pack_examples.rs
(+124 files in other folders)
