[package]
name = "harness-lint"
version = "0.2.1"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
globset = "0.4.18"
heck = "0.5.0"
ignore = "0.4.25"
reqwest = { version = "0.12.24", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
thiserror = "2.0.17"
toml = "0.9.8"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
